<resources>
    <string name="app_name">Registration Form</string>
    <string name="header">Registrations</string>
    <string name="info_header">Form details</string>
    <string name="pd_name">Enter Name</string>
    <string name="pd_username">Enter Username</string>
    <string name="pd_password">Enter Password</string>
    <string name="pd_repeatpassword">Repeat Password</string>
    <string name="btnText">Register</string>
    <string name="title_activity_detail_form">Detail Form</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>